Login stub. New map tiles.

--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -26,6 +26,24 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <div class="container">
+      <nav class="navbar navbar-default" role="navigation"> 
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-tower"></span> Politik</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <a type="button" class="btn-login navbar-btn navbar-right" href="#/login">Sign in</a>
+        </div><!-- /.navbar-collapse -->
+      </nav>
+    </div>
     <div class="container" ng-view=""></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
