Decoupled angular services. New migration schema and database seeds.

--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="uiApp">
+  <body ng-app="UiApp">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -79,7 +79,10 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/services/map.js"></script>
+        <script src="scripts/services/map-repository.js"></script>
+		<script src="scripts/services/map-sector.js"></script>
+        <script src="scripts/services/map-color.js"></script>
+        <script src="scripts/services/map-style.js"></script>
         <!-- endbuild -->
 </body>
 </html>
