--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -27,7 +27,7 @@
 
     <!-- Add your site or application content here -->
     <div class="container">
-      <nav class="navbar navbar-default" role="navigation"> 
+      <nav class="navbar navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -79,8 +79,8 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/services/map.js"></script>
         <script src="scripts/services/map-repository.js"></script>
-		<script src="scripts/services/map-sector.js"></script>
         <script src="scripts/services/map-color.js"></script>
         <script src="scripts/services/map-style.js"></script>
         <!-- endbuild -->
