--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -48,6 +48,7 @@
 		<script src="bower_components/json3/lib/json3.min.js"></script>
 		<![endif]-->
 
+		<script src="//www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
 		<!-- build:js scripts/vendor.js -->
 		<!-- bower:js -->
 		<script src="bower_components/jquery/jquery.js"></script>
@@ -61,6 +62,9 @@
 		<script src="bower_components/leaflet-dist/leaflet.js"></script>
 		<script src="bower_components/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
 		<script src="bower_components/angular-base64/angular-base64.js"></script>
+		<script src="bower_components/angular-gravatar/src/md5.js"></script>
+		<script src="bower_components/angular-gravatar/build/angular-gravatar.js"></script>
+		<script src="bower_components/angular-recaptcha/release/angular-recaptcha.js"></script>
 		<!-- endbuild -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.9.0/ui-bootstrap-tpls.min.js"></script>
 
